--- a/packages/garden/garden_weather_calculations.yaml
+++ b/packages/garden/garden_weather_calculations.yaml
@@ -53,7 +53,12 @@ automation:
           - input_number.temperature_baseline
           - input_number.rainfall_threshold
     action:
+      - service: script.calculate_average_weather_conditions
+
+      - wait_template: "{{ is_state('script.calculate_average_weather_conditions', 'off') }}"
+
       - service: script.adjust_cycle1_durations
+
       - service: script.adjust_cycle2_durations
       
   # Weather adjustment turned on
