--- a/packages/garden/garden_notifications.yaml
+++ b/packages/garden/garden_notifications.yaml
@@ -1,3 +1,13 @@
+
+#===================
+#=== Input Booleans
+#===================
+input_boolean:
+  telegram_holiday_irrigation_steve:
+
+  telegram_holiday_irrigation_sarah:
+
+
 #================
 #=== Automations
 #================
@@ -6,8 +16,7 @@ automation:
   #===================================================
   #=== Notify about irrigation events when on holiday
   #===================================================
-  - alias: Irrigation - Notify about irrigation events when on holiday
-    initial_state: on
+  - alias: Irrigation - Notify About Irrigation Events When On Holiday
     trigger:
       - platform: state
         entity_id:
@@ -19,6 +28,15 @@ automation:
         entity_id: binary_sensor.holiday_mode
         state: 'on'
     
+      - condition: or
+        conditions:
+          - condition: state
+            entity_id: input_boolean.telegram_holiday_irrigation_steve
+            state: 'on'
+          - condition: state
+            entity_id: input_boolean.telegram_holiday_irrigation_sarah
+            state: 'on'         
+
     action:
       - service_template: >
           {% if trigger.to_state.state == 'on' %}
@@ -47,9 +65,20 @@ script:
   #===============================
   notify_irrigation_start:    
     sequence:
+      - wait_template: >
+          {{ is_state('script.notify', 'off') }}
+
       - service: script.notify
         data_template:
-          tell: steve_and_sarah
+          tell: >
+            {% if is_state('input_boolean.telegram_holiday_irrigation_steve', 'on') and
+                  is_state('input_boolean.telegram_holiday_irrigation_sarah', 'on') %}
+              steve_and_sarah
+            {% elif is_state('input_boolean.telegram_holiday_irrigation_sarah', 'on') %}
+              sarah
+            {% else %}
+              steve
+            {% endif %}
           message: >
             {% set cycle_map = {
               '1': 'morning',
@@ -57,25 +86,22 @@ script:
             } %}
             {% set cycle_time = cycle_map[cycle] %}
 
-            {% if is_state('input_boolean.cycle' + cycle + '_use_weather_adjustment', 'off') %}
-              {% set total_time = states('input_number.cycle' + cycle + '_zone1_duration') | int
-                                + states('input_number.cycle' + cycle + '_zone2_duration') | int
-                                + states('input_number.cycle' + cycle + '_zone3_duration') | int
-                                + states('input_number.cycle' + cycle + '_zone4_duration') | int
-                                + states('input_number.cycle' + cycle + '_zone5_duration') | int %}
-
+            {% if is_state('input_boolean.cycle1_use_weather_adjustment', 'off') %}
+              {% set ns = namespace(total_time = 0) %}
+              {% for zone in states if zone.entity_id.startswith('input_number.cycle1_zone') %}
+                {% set ns.total_time = ns.total_time + states(zone.entity_id) | int %}
+              {% endfor %}
             {% else %}
-              {% set total_time = states('input_number.adjusted_cycle' + cycle + '_zone1_duration') | int
-                                + states('input_number.adjusted_cycle' + cycle + '_zone2_duration') | int
-                                + states('input_number.adjusted_cycle' + cycle + '_zone3_duration') | int
-                                + states('input_number.adjusted_cycle' + cycle + '_zone4_duration') | int
-                                + states('input_number.adjusted_cycle' + cycle + '_zone5_duration') | int %}
+              {% set ns = namespace(total_time = 0) %}
+              {% for zone in states if zone.entity_id.startswith('input_number.adjusted_cycle1_zone') %}
+                {% set ns.total_time = ns.total_time + states(zone.entity_id) | int %}
+              {% endfor %}
             {% endif %}
 
             I thought you'd like to know that the {{cycle_time}} irrigation cycle has just started.
 
 
-            I expect it will take about {{ total_time }} minutes to finish but I'll let you know when it has.
+            It should take about {{ ns.total_time }} minutes to finish but I'll let you know when it has.
 
 
             Don't worry your garden is safe with me. I hope you're having a lovely holiday!
@@ -88,9 +114,20 @@ script:
   #=============================
   notify_irrigation_end:    
     sequence:
+      - wait_template: >
+          {{ is_state('script.notify', 'off') }}
+
       - service: script.notify
         data_template:
-          tell: steve_and_sarah
+          tell: >
+            {% if is_state('input_boolean.telegram_holiday_irrigation_steve', 'on') and
+                  is_state('input_boolean.telegram_holiday_irrigation_sarah', 'on') %}
+              steve_and_sarah
+            {% elif is_state('input_boolean.telegram_holiday_irrigation_sarah', 'on') %}
+              sarah
+            {% else %}
+              steve
+            {% endif %}
           message: >
             {% set cycle_map = {
               '1': 'morning',
